--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       +234 (0) 908 807 2236
     </div>
 
-    <div class="justify-content-end">
+    <div class="justify-content-end d-none">
       <i class="p-2 bi bi-twitter"></i>
       <i class="p-2 bi bi-facebook"></i>
       <i class="p-2 bi bi-instagram"></i>
